[gd_scene load_steps=16 format=3 uid="uid://cvhnovcheippa"]

[ext_resource type="Script" uid="uid://bp6okuxmf7p1c" path="res://src/menus/editor/PuzzleSetEditor.gd" id="1_02h6s"]
[ext_resource type="Theme" uid="uid://rv7rm10d10gc" path="res://src/ui/BlueWoodPanelTheme.tres" id="2_4l1l2"]
[ext_resource type="Theme" uid="uid://nnr7pyxv7mve" path="res://src/ui/PaperHeroLabelTheme.tres" id="2_gk83m"]
[ext_resource type="Theme" uid="uid://crneit8sf87tj" path="res://src/ui/DotHopTheme.tres" id="2_qukly"]
[ext_resource type="Theme" uid="uid://o436126qschu" path="res://src/ui/PaperLabelTheme.tres" id="3_ify5j"]
[ext_resource type="Theme" uid="uid://d36tu8qosbiom" path="res://src/ui/RedButtonTheme.tres" id="4_p17ef"]
[ext_resource type="Script" uid="uid://bd046eokvcnu2" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="5_p0cuu"]
[ext_resource type="Script" uid="uid://dj7ss38l7q7xs" path="res://src/core/DHPhantomCam.gd" id="6_p17ef"]
[ext_resource type="Script" uid="uid://8umksf8e80fw" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="7_sc3ik"]
[ext_resource type="Script" uid="uid://dcuk3w0lr0qth" path="res://src/dothop/GameMusic.gd" id="9_sc3ik"]
[ext_resource type="Script" uid="uid://ctadfanugtrbv" path="res://src/modes/TreadmillMode.gd" id="10_5gb2o"]
[ext_resource type="Script" uid="uid://bdptumf84yi2o" path="res://src/dothop/PuzzleInputHandler.gd" id="11_5gb2o"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ergn3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_khnrg"]

[sub_resource type="Resource" id="Resource_iuffk"]
script = ExtResource("7_sc3ik")
duration = 1.0
transition = 0
ease = 2

[node name="PuzzleSetEditor" type="CanvasLayer"]
script = ExtResource("1_02h6s")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_ergn3")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="MarginContainer6" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer4" type="MarginContainer" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="Panel" type="Panel" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/VBoxContainer/HBoxContainer2/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CurrentPuzzleLabel2" type="RichTextLabel" parent="PanelContainer/VBoxContainer/HBoxContainer2/Panel/CenterContainer"]
unique_name_in_owner = true
clip_contents = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme = ExtResource("2_qukly")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[center]Puzzle Viewer [color=peru][experimental][/color]"
fit_content = true
scroll_active = false

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="CurrentPuzzleLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
clip_contents = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme = ExtResource("2_gk83m")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[center]Them Dots # 1"
fit_content = true
scroll_active = false

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="CurrentPuzzleAnalysisLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
clip_contents = false
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_ify5j")
bbcode_enabled = true
text = "w: 7, h: 3
dots: [color=dark_blue]4[/color] paths: [color=forest_green]1 win[/color]/[color=crimson]0 stuck_dot[/color]/[color=crimson]0 stuck_goal[/color]/[color=peru]1 all[/color]"
fit_content = true
scroll_active = false

[node name="MarginContainer3" type="MarginContainer" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="ButtonToMain" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("4_p17ef")
text = "To Main"

[node name="MarginContainer5" type="MarginContainer" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="MarginContainer5" type="MarginContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 20)
layout_mode = 2

[node name="PuzzleSetGrid" type="GridContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 7

[node name="MarginContainer4" type="MarginContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 20)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
theme = ExtResource("2_4l1l2")

[node name="PuzzlesGrid" type="GridContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/CenterContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_4l1l2")
columns = 4

[node name="MarginContainer3" type="MarginContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="CenterContainer2" type="CenterContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PuzzleContainerPanel" type="PanelContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/CenterContainer2"]
visible = false
z_index = -1
z_as_relative = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_khnrg")

[node name="SubViewportContainer" type="SubViewportContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/CenterContainer2"]
clip_contents = true
custom_minimum_size = Vector2(630, 512)
layout_mode = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="PanelContainer/VBoxContainer/HBoxContainer/CenterContainer2/SubViewportContainer"]
disable_3d = true
handle_input_locally = false
size = Vector2i(630, 512)
render_target_update_mode = 4

[node name="PuzzleContainer" type="Node2D" parent="PanelContainer/VBoxContainer/HBoxContainer/CenterContainer2/SubViewportContainer/SubViewport"]
unique_name_in_owner = true

[node name="Camera2D" type="Camera2D" parent="PanelContainer/VBoxContainer/HBoxContainer/CenterContainer2/SubViewportContainer/SubViewport/PuzzleContainer"]
position = Vector2(192.145, 65.2481)
zoom = Vector2(4.04525, 4.04525)
editor_draw_limits = true

[node name="PhantomCameraHost" type="Node" parent="PanelContainer/VBoxContainer/HBoxContainer/CenterContainer2/SubViewportContainer/SubViewport/PuzzleContainer/Camera2D"]
process_priority = 300
process_physics_priority = 300
script = ExtResource("5_p0cuu")
metadata/_custom_type_script = "uid://bd046eokvcnu2"

[node name="PhantomCamera2D" type="Node2D" parent="PanelContainer/VBoxContainer/HBoxContainer/CenterContainer2/SubViewportContainer/SubViewport/PuzzleContainer" node_paths=PackedStringArray("follow_targets")]
top_level = true
position = Vector2(192.145, 65.2481)
script = ExtResource("6_p17ef")
follow_mode = 3
follow_targets = [null, null, null, null, null]
zoom = Vector2(4.04525, 4.04525)
tween_resource = SubResource("Resource_iuffk")
auto_zoom = true
auto_zoom_margin = Vector4(100, 100, 100, 100)
draw_limits = true
metadata/_custom_type_script = "uid://bhexx6mj1xv3q"

[node name="GameMusic" type="Node" parent="PanelContainer/VBoxContainer/HBoxContainer/CenterContainer2/SubViewportContainer/SubViewport/PuzzleContainer"]
script = ExtResource("9_sc3ik")

[node name="TreadmillMode" type="Node" parent="PanelContainer/VBoxContainer/HBoxContainer/CenterContainer2/SubViewportContainer/SubViewport/PuzzleContainer"]
script = ExtResource("10_5gb2o")

[node name="PuzzleInputHandler" type="Node" parent="PanelContainer/VBoxContainer/HBoxContainer/CenterContainer2/SubViewportContainer/SubViewport/PuzzleContainer"]
script = ExtResource("11_5gb2o")
enabled = false
